# yamlchain

./: .nvimrc.lua  Cargo.toml  LICENSE  README.md  build.rs  install-hooks.sh  shell.nix  workflows-schema.json  yc-workflows.yaml
examples/: yc-create-readme.yaml  yc-translate-file.yaml
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  interface.rs  llm.rs  main.rs  schema.rs  workflows.rs
src/interface/: cli.rs  vim.rs
src/workflows/: stages.rs
src/workflows/stages/: ai_processing.rs  ai_reshape.rs  echo.rs  feedback_loop.rs  for_each.rs  if_else.rs  load_file.rs  print.rs  python.rs  save_file.rs  set.rs  shell.rs  shell_script.rs  split.rs  to_json.rs  try_catch.rs  until.rs  user_input.rs  warn.rs
