[package]
name = "yamlchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.14"
async-trait = "0.1.74"
openai = "1.0.0-alpha.13"
serde_json = "1.0.107"
serde_yaml = "0.8.26"
serde = "1.0.189"
schemars = "0.8.15"
base64 = "0.13.0"
dotenv = "0.15.0"
regex = "1.10.2"
macros = { path = "macros" }
tempfile = "3.8.1"

[build-dependencies]
syn = { version = "2.0.38", features = ["full"] }
quote = "1.0.33"
walkdir = "2.4.0"
proc-macro2 = "1.0.69"
